content/documentation/mocha/5.5.2/UserGuide/en_US/overview.adoc

== Interface Overview

image://borisfx-com-res.cloudinary.com/image/upload/v1531784130/documentation/mocha/images/5.5.2/main-overview.jpg[]

To quickly get familiar with mocha before you dive into the rest of the manual, here is a breakdown of the interface and its controls.

NOTE: Interface Overview uses the mocha Pro Interface. Versions of the mocha Pro Plugin, mocha HitFilm, mocha for After Effects etc. may differ in presentation, but their tools perform the same function

=== The Main Toolbar

image://borisfx-com-res.cloudinary.com/image/upload/v1531784130/documentation/mocha/images/5.5.2/MainToolbar.jpg[]

At the very top of the interface you have the tools that form the brunt of your time inside mocha.

[cols='^1,2a', frame="none", grid="rows", valign="middle"]
|===
| image://borisfx-com-res.cloudinary.com/image/upload/v1531784130/documentation/mocha/images/5.5.2/ICON_NewProject_001.jpg[]|*New Project:* Starts a project wizard for a new clip
| image://borisfx-com-res.cloudinary.com/image/upload/v1531784130/documentation/mocha/images/5.5.2/ICON_OpenProject_001.jpg[]|*Open Project:* Open a previously saved project
| image://borisfx-com-res.cloudinary.com/image/upload/v1531784130/documentation/mocha/images/5.5.2/ICON_SaveProject_001.jpg[]|*Save Project:* Save the project
| image://borisfx-com-res.cloudinary.com/image/upload/v1531784130/documentation/mocha/images/5.5.2/ICON_Undo_001.jpg[]|*Undo:* Undo tasks
| image://borisfx-com-res.cloudinary.com/image/upload/v1531784130/documentation/mocha/images/5.5.2/ICON_Redo_002.jpg[]|*Redo:* Redo tasks revoked by Undo
| image://borisfx-com-res.cloudinary.com/image/upload/v1531784130/documentation/mocha/images/5.5.2/ICON_Select_001.jpg[]|*Select:* Selection tool for splines and points. Hold the button to choose between Marquee selection and Lasso selection.
| image://borisfx-com-res.cloudinary.com/image/upload/v1531784130/documentation/mocha/images/5.5.2/ICON_SBoth_001.jpg[]|*Select Both:* Selects both the Inner spline points and the edge points.  Hold this button down to select further options (See below)
| image://borisfx-com-res.cloudinary.com/image/upload/v1531784130/documentation/mocha/images/5.5.2/ICON_SInner_001.jpg[]|*Select Inner:* Only selects the inner spline points
| image://borisfx-com-res.cloudinary.com/image/upload/v1531784130/documentation/mocha/images/5.5.2/ICON_SEdge_001.jpg[]|*Select Edge:* Only selects the outer edge points
| image://borisfx-com-res.cloudinary.com/image/upload/v1531784130/documentation/mocha/images/5.5.2/ICON_SAuto_001.jpg[]|*Select Auto:* Automatically selects between Inner and Edge points
| image://borisfx-com-res.cloudinary.com/image/upload/v1531784130/documentation/mocha/images/5.5.2/ICON_AddPoint_001.jpg[]|*Add Point:* Tool to add points to the spline
| image://borisfx-com-res.cloudinary.com/image/upload/v1531784130/documentation/mocha/images/5.5.2/ICON_Pan_001.jpg[]|*Pan:* Used to pan the footage in the Viewer
| image://borisfx-com-res.cloudinary.com/image/upload/v1531784130/documentation/mocha/images/5.5.2/ICON_Zoom_001.jpg[]|*Zoom:* Used to zoom into footage in the viewer
| image://borisfx-com-res.cloudinary.com/image/upload/v1531784130/documentation/mocha/images/5.5.2/ICON_XSplines_001.jpg[]|*Create X-Spline Layer:* Draw a new X-Spline layer
| image://borisfx-com-res.cloudinary.com/image/upload/v1531784130/documentation/mocha/images/5.5.2/ICON_AddXSpline_001.jpg[]|*Add X-Spline to Layer:* Draw an X-spline that is added to the current spline layer.
| image://borisfx-com-res.cloudinary.com/image/upload/v1531784130/documentation/mocha/images/5.5.2/ICON_BezSplines_001.jpg[]|*Create Bezier-Spline Layer:* Draw a new B-Spline layer
| image://borisfx-com-res.cloudinary.com/image/upload/v1531784130/documentation/mocha/images/5.5.2/ICON_AddBezSplines_001.jpg[]|*Add Bezier-Spline to Layer:* Draw a B-spline that is added to the current spline layer.
| image://borisfx-com-res.cloudinary.com/image/upload/v1531784130/documentation/mocha/images/5.5.2/ICON_Snap_001.jpg[]|*Attach Layer:* Used to select a point and drag-lock it to another layer&rsquo;s spline point. Useful for lining up individual splines.
| image://borisfx-com-res.cloudinary.com/image/upload/v1531784130/documentation/mocha/images/5.5.2/ICON_Rotate_001.jpg[]|*Rotate:* Rotate selection around the axis of the point you click in the viewer
| image://borisfx-com-res.cloudinary.com/image/upload/v1531784130/documentation/mocha/images/5.5.2/ICON_Scale_001.jpg[]|*Scale:* Scale Selection
| image://borisfx-com-res.cloudinary.com/image/upload/v1531784130/documentation/mocha/images/5.5.2/ICON_Move_001.jpg[]|*Move:* Move selection
| image://borisfx-com-res.cloudinary.com/image/upload/v1531784130/documentation/mocha/images/5.5.2/ICON_TransformTool_001.jpg[]|*Transform Tool:* Toggles the transform bounding box for manipulating selections
|===

=== The Viewer Controls

image://borisfx-com-res.cloudinary.com/image/upload/v1531784130/documentation/mocha/images/5.5.2/ViewControls_Toolbar_001.jpg[]

These controls cover what can been seen or hidden while working in the mocha viewer.

[cols='^1,2a', frame="none", grid="rows", valign="middle"]
|===
| image://borisfx-com-res.cloudinary.com/image/upload/v1531784130/documentation/mocha/images/5.5.2/ICON_Footage_001.jpg[]|*Clip to Show:* Choose which clip to view from this dropdown
| image://borisfx-com-res.cloudinary.com/image/upload/v1531784130/documentation/mocha/images/5.5.2/ICON_Proxy_001.jpg[]|*Proxy Scale:* Adjust the resolution of the footage for performance
| image://borisfx-com-res.cloudinary.com/image/upload/v1531784130/documentation/mocha/images/5.5.2/ICON_3D_Views_001.jpg[]|*3D:* View a stereo shot in 3D stereo mode. See below.
| image://borisfx-com-res.cloudinary.com/image/upload/v1531784130/documentation/mocha/images/5.5.2/ICON_RGB_001.jpg[]|*Show RGB Channels:* Turns on the RGB view of the footage
| image://borisfx-com-res.cloudinary.com/image/upload/v1531784130/documentation/mocha/images/5.5.2/ICON_Alpha_001.jpg[]|*Show Alpha Channels:* Turns on the Alpha view of the footage
| image://borisfx-com-res.cloudinary.com/image/upload/v1531784130/documentation/mocha/images/5.5.2/ICON_Mattes_001.jpg[]|*Show Layer Mattes:* Toggle on or off to show the mattes. Select from the dropdown to choose the type of matte
| image://borisfx-com-res.cloudinary.com/image/upload/v1531784130/documentation/mocha/images/5.5.2/ICON_colorise_001.jpg[]|*Color Layer Mattes:* Fills matte with Color. Decreasing the value lessens the opacity
| image://borisfx-com-res.cloudinary.com/image/upload/v1531784130/documentation/mocha/images/5.5.2/ICON_Overlays_001.jpg[]|*Overlays:* Toggles all viewer overlays, including splines, tangents, surface and grid
| image://borisfx-com-res.cloudinary.com/image/upload/v1531784130/documentation/mocha/images/5.5.2/ICON_Layers_001.jpg[]|*Show Layer Outlines:* Toggles all spline overlays, including splines, points and tangents
| image://borisfx-com-res.cloudinary.com/image/upload/v1531784130/documentation/mocha/images/5.5.2/ICON_Tangents_001.jpg[]|*Show Spline Tangents:* Toggles spline tangents view. Select from the dropdown to choose the type of view
| image://borisfx-com-res.cloudinary.com/image/upload/v1531784130/documentation/mocha/images/5.5.2/ICON_Surface_001.jpg[]|*Show Planar Surface:* Toggles the planar surface view
| image://borisfx-com-res.cloudinary.com/image/upload/v1531784130/documentation/mocha/images/5.5.2/ICON_Grid_001.jpg[]|*Show Planar Grid:* Toggles a grid relative to the planar surface view. You can adjust the number of grid lines under Viewer Preferences (See below)
| image://borisfx-com-res.cloudinary.com/image/upload/v1531784130/documentation/mocha/images/5.5.2/ICON_ZoomWindow_001.jpg[]|*Show Zoom Window:* Toggles the Zoom window
| image://borisfx-com-res.cloudinary.com/image/upload/v1531784130/documentation/mocha/images/5.5.2/ICON_Stabilize_001.jpg[]|*Stabilize:* Turns on stabilize view. This centers the footage around your tracked surface.
| image://borisfx-com-res.cloudinary.com/image/upload/v1531784130/documentation/mocha/images/5.5.2/ICON_Trace_001.jpg[]|*Trace:* Turns on the traced path of the tracked surface. You can adjust the amount of frames to trace under Viewer Preferences (See below)
| image://borisfx-com-res.cloudinary.com/image/upload/v1531784130/documentation/mocha/images/5.5.2/ICON_Brightness_001.jpg[]|*Enable Brightness Scaling:* Toggles brightness adjustment to work with low-contrast footage.
| image://borisfx-com-res.cloudinary.com/image/upload/v1531784130/documentation/mocha/images/5.5.2/ICON_ViewerControls_001.jpg[]|*Viewer Preferences:* Adjustments dialog for parameters such as grid lines and trace frames
|===

=== Viewing in Stereo

You can preview stereo work at any time by turning on the *3D* button in the view controls.  Clicking and holding on the *3D* button will give you a range of stereo view options.

.Stereo 3D View Options
* *Interlaced*: Each view is show on every other line in fields
* *Active*: If you have an active shutter monitor available, you can view in this mode (Note: Only tested on Windows)
* *Anaglyph*: Probably the most common mode to view stereo work through.  You can choose from Red/Cyan or Green/Magenta
* *Difference*: A difference mode of the views laid over each other.  This view also has additional functionality explained below


=== The Timeline Controls

image://borisfx-com-res.cloudinary.com/image/upload/v1531784130/documentation/mocha/images/5.5.2/Timeline_001.jpg[]

The timeline controls cover frame range, playback, tracking controls and key-framing.

[cols='^1,1', frame="none", grid="rows", valign="middle"]
|===
| image://borisfx-com-res.cloudinary.com/image/upload/v1531784130/documentation/mocha/images/5.5.2/ICON_FrameField_001.jpg[]|*Project In-Point:* Frame where timeline playback starts
| image://borisfx-com-res.cloudinary.com/image/upload/v1531784130/documentation/mocha/images/5.5.2/ICON_InPoint_001.jpg[]|*Set In-Point:* Set the in-point for the timeline
| image://borisfx-com-res.cloudinary.com/image/upload/v1531784130/documentation/mocha/images/5.5.2/ICON_ClearIn_001.jpg[]|*Reset In-Point:* Set the in-point back to the start of the clip
| image://borisfx-com-res.cloudinary.com/image/upload/v1531784130/documentation/mocha/images/5.5.2/ICON_FrameField_001.jpg[]|*Current Frame:* The frame the playhead is currently on. Enter a new value to jump to that frame.
| image://borisfx-com-res.cloudinary.com/image/upload/v1531784130/documentation/mocha/images/5.5.2/ICON_ClearOut_001.jpg[]|*Reset Out Point:* Set the out point back to the end of the clip
| image://borisfx-com-res.cloudinary.com/image/upload/v1531784130/documentation/mocha/images/5.5.2/ICON_OutPoint_001.jpg[]|*Set Out Point:* Set the out point for the timeline
| image://borisfx-com-res.cloudinary.com/image/upload/v1531784130/documentation/mocha/images/5.5.2/ICON_FrameField_001.jpg[]|*Project Out Point:* Frame where timeline playback ends
| image://borisfx-com-res.cloudinary.com/image/upload/v1531784130/documentation/mocha/images/5.5.2/ICON_ZoomTimeline_001.jpg[]|*Zoom Timeline to In/Out points:* Expands the timeline between the in and out points to the edges of the viewer
| image://borisfx-com-res.cloudinary.com/image/upload/v1531784130/documentation/mocha/images/5.5.2/ICON_ClearZoom_001.jpg[]|*Zoom Timeline to full frame range:* Resets the timeline scale to the full range of frames
| image://borisfx-com-res.cloudinary.com/image/upload/v1531784130/documentation/mocha/images/5.5.2/ICON_Playbar_001.jpg[]|*Play Controls:* Controls for playing back and forth and moving one frame at a time
| image://borisfx-com-res.cloudinary.com/image/upload/v1531784130/documentation/mocha/images/5.5.2/ICON_PingPong_001.jpg[]|*Change Playback Mode:* Toggles tri-state button between Play once, Loop and Bounce playback modes.
| image://borisfx-com-res.cloudinary.com/image/upload/v1531784130/documentation/mocha/images/5.5.2/ICON_TrackPlaybar_001.jpg[]|*Tracking Controls:* Controls for tracking back and forth and tracking one frame at a time.
| image://borisfx-com-res.cloudinary.com/image/upload/v1531784130/documentation/mocha/images/5.5.2/ICON_PreviousKey_001.jpg[]|*Go to Previous Keyframe:* Jump to the previous keyframe set in the timeline for that layer
| image://borisfx-com-res.cloudinary.com/image/upload/v1531784130/documentation/mocha/images/5.5.2/ICON_NextKey_001.jpg[]|*Go to Next Keyframe:* Jump to the next keyframe set in the timeline for that layer
| image://borisfx-com-res.cloudinary.com/image/upload/v1531784130/documentation/mocha/images/5.5.2/ICON_AddKey_001.jpg[]|*Add New Keyframe:* Add a new keyframe at the current position for the selected layer
| image://borisfx-com-res.cloudinary.com/image/upload/v1531784130/documentation/mocha/images/5.5.2/ICON_DeleteAll_001.jpg[]|*Delete New Keyframe:* Deletes the keyframe at the current position for the selected layer
| image://borisfx-com-res.cloudinary.com/image/upload/v1531784130/documentation/mocha/images/5.5.2/ICON_DeleteAll_001.jpg[]|*Delete All Keyframes:* Deletes all keyframes on the timeline for the selected layer
| image://borisfx-com-res.cloudinary.com/image/upload/v1531784130/documentation/mocha/images/5.5.2/ICON_AutoKey_001.jpg[]|*Autokey:* Toggles automatic key insertion when moving points or adjusting parameters
| image://borisfx-com-res.cloudinary.com/image/upload/v1531784130/documentation/mocha/images/5.5.2/ICON_UBERKey_001.jpg[]|*Überkey:* Toggles the Überkey, which modifies all keys in the layer relative to the key you are now on.
|===

=== Layer Controls

image://borisfx-com-res.cloudinary.com/image/upload/v1531784130/documentation/mocha/images/5.5.2/LayerControls_001.jpg[]

The top left hand panel contains the tools to manage layers.

[cols='1,1a', frame="none", grid="rows", valign="top"]
|===
| image://borisfx-com-res.cloudinary.com/image/upload/v1531784130/documentation/mocha/images/5.5.2/LayerView_001.jpg[] |
*Layer Icons:*

* Click the *Eye* to toggle layer visibility
* Click the *Cog* to toggle tracking for that layer
* Click the *Lock* to toggle locking
* Click the *Spline Color* to change the color of the selected layer splines
* Click the *Matte Color* to change the color of the selected layer mattes

| image://borisfx-com-res.cloudinary.com/image/upload/v1531784130/documentation/mocha/images/5.5.2/LayerActions_001.jpg[] |

*Layer Actions dropdown:*

* *Select All:* Selects all layers
* *Select Group:* Selects all layers in a selected group
* *Invert Selection:* Inverts the layer selection
* *Delete Selected:* Deletes all selected layers
* *Duplicate:* Duplicates all selected layers
* *Lock Selected:* Locks all selected layers
* *Lock All:* Locks all layers
* *New Group:* Creates a new empty group
* *Group Selected:* Creates a group containing the selected layers
* *Align Selected Surfaces:* Aligns the selected layer surfaces to the dimensions of the footage at the current frame
* *Toggle Active at current frame:* Activates or Deactivates the layer on the current frame

| image://borisfx-com-res.cloudinary.com/image/upload/v1531784130/documentation/mocha/images/5.5.2/ICON_Group_001.jpg[]|*Group Layer:* Groups the currently selected layers. If no layers are selected, creates an empty group.
| image://borisfx-com-res.cloudinary.com/image/upload/v1531784130/documentation/mocha/images/5.5.2/ICON_New-Layer_001.jpg[]|*Duplicate Layer:* Duplicates the currently selected layers
| image://borisfx-com-res.cloudinary.com/image/upload/v1531784130/documentation/mocha/images/5.5.2/ICON_TrashLayer_001.jpg[]|*Delete Layer:* Delete currently selected layers on all frames
| image://borisfx-com-res.cloudinary.com/image/upload/v1531784130/documentation/mocha/images/5.5.2/ICON_AlignSurface_001.jpg[]|*Align Surface:* Expands the layer surface to fit the dimensions of the footage at the current frame. All tracked data is made relative to this new alignment.
|===


=== Layer Properties

The section under the Layer Controls panel contains the properties for each layer.

[cols='2,1', frame="none", grid="rows", valign="middle"]
|===
| image://borisfx-com-res.cloudinary.com/image/upload/v1531784130/documentation/mocha/images/5.5.2/LayerInOut_001.jpg[]|*Layer In/Out frames:* Settings to change where the layer turns on and off in the clip
| image://borisfx-com-res.cloudinary.com/image/upload/v1531784130/documentation/mocha/images/5.5.2/ICON_BlendMode_004.jpg[]|*Blend mode:* Dropdown to add or subtract your spline to the current layer. Invert flips this
| image://borisfx-com-res.cloudinary.com/image/upload/v1531784130/documentation/mocha/images/5.5.2/ICON_InsertClip_001.jpg[]|*Insert Clip:* Insert a demo clip to preview your track. You can use one of the defaults or import your own. For preview purposes only
| image://borisfx-com-res.cloudinary.com/image/upload/v1531784130/documentation/mocha/images/5.5.2/ICON_MatteClip_001.jpg[]|*Matte Clip:* Replaces the current layer splines with a matte clip.
| image://borisfx-com-res.cloudinary.com/image/upload/v1531784130/documentation/mocha/images/5.5.2/ICON_LinkToTrack_001.jpg[]|*Link to Track:* Which layer&rsquo;s track to link your layer splines to. Can also be set to None.
| image://borisfx-com-res.cloudinary.com/image/upload/v1531784130/documentation/mocha/images/5.5.2/ICON_LinkToAdjustedTrack_001.jpg[]|*Link to adjusted track:* Optional checkbox to link the layer splines to the adjusted track of the selection in &ldquo;Link to Track&rdquo;
|===

=== Cache Management

In mocha v5 we introduced manual cache clearing to allow you to clear the mocha cache at the project, render or global level.

You can access the Clear Cache option from the file menu under File -> Clear Cache...

image://borisfx-com-res.cloudinary.com/image/upload/v1531784130/documentation/mocha/images/5.5.2/5.0.0_mochapro_clear_cache_dialog.jpg[]

You can check the following options:

* *Project Cache:* Clear the cache for the currently loaded project
* *Rendered Clips:* Clear just the rendered clips for the project
* *Global Cache:* Clear everything in the entire mocha cache.

Only clear the Global Cache if you are certain you don't want any of your existing project caches to remain.
